--- a/easyshop/WebContent/views/system/home.html
+++ b/easyshop/WebContent/views/system/home.html
@@ -33,6 +33,7 @@
                 <a href="javascript:;" src="../ww/salesreport.html" class="u-nav">销售报表</a>
                 <a href="javascript:;" src="../ww/salestatistic.html" class="u-nav">销售统计</a>
                 <a href="javascript:;" src="../ww/transportstatistic.html" class="u-nav">运费统计</a>
+                <a href="javascript:;" src="../ww/personmanage.html" class="u-nav">用户管理</a>
             </div>
         </div>
         <div data-options="region:'center', border:false">
