--- a/easyshop/WebContent/views/system/home.html
+++ b/easyshop/WebContent/views/system/home.html
@@ -24,6 +24,7 @@
                 <a href="javascript:;" src="orderManage.html" class="u-nav">订单管理</a>
                 <a href="javascript:;" src="banner.html" class="u-nav">banner管理</a>
                 <a href="javascript:;" src="limit.html" class="u-nav">限时活动</a>
+                <a href="javascript:;" src="activity.html" class="u-nav">专场活动</a>
                 <a href="javascript:;" src="hot1.html" class="u-nav">热卖商品1</a>
                 <a href="javascript:;" src="hot2.html" class="u-nav">热卖商品2</a>
                 <a href="javascript:;" src="award.html" class="u-nav">抽奖</a>
