--- a/easyshop/WebContent/views/login.html
+++ b/easyshop/WebContent/views/login.html
@@ -133,7 +133,8 @@
 					
 					<div class="login-header">
 						<a href="dashboard-1.html" class="logo">
-							<img src="../assets/images/logo@2x.png" alt="" width="80" />
+							<!--<img src="../assets/images/logo@2x.png" alt="" width="80" />-->
+							<span style="font-size: 24px;">洋流</span>
 							<span>登录</span>
 						</a>
 						
@@ -158,9 +159,9 @@
 						</button>
 					</div>
 					
-					<div class="login-footer">
+					<!--<div class="login-footer">
 						<a href="#">忘记密码?</a>
-					</div>
+					</div>-->
 					
 				</form>
 			</div>
